--- a/cats.html
+++ b/cats.html
@@ -40,7 +40,7 @@
           <!--Pet Section -->
         <section class="container py-5 mt-5 ">
           <div class="row">
-            <img src="images/cat-img.jpg" alt="cat" class="mx-auto">
+            <img src="images/cat-img01.jpg" alt="cat" class="mx-auto">
             <h2 class="text-primary fs-1 fw-bold mb-5 text-center">Our Feline Friends</h2>
             <p>Cats were first domesticated around 7500 BCE in the western Asia region and are currently the second most popular domestic pet in the United States. While there are over 60 unique documented cat breeds, care and diet can differ between breeds. However, some diets and practices are generally recommended for the well-being of your fluffy family member regardless of breed.</p>
 
