--- a/dogs.html
+++ b/dogs.html
@@ -40,7 +40,7 @@
           <!--Pet Section -->
           <section class="container py-5 mt-5 ">
             <div class="row">
-              <img src="images/dog-img.jpg" alt="cat" class="mx-auto">
+              <img src="images/twoDogs.jpg" alt="cat" class="mx-auto">
               <h2 class="text-primary fs-1 fw-bold mb-5 text-center">Our Canine Companions </h2>
               <p>The domestic dog is an extremely social animal and offers a diverse variety of choices as there are well over 300 breeds recognized by the World Canine Organization. Adopting a dog offers mutual benefits between dog and owner. Many studies cite the social benefits of having a companion as well as the reduced feelings of loneliness from adopting a dog. Studies even show medical indicators such as reduced blood pressure and improved lipid profiles. If you have a dog, it is important to make sure that you care for your dog; be mindful of what you feed your dog and provide enough opportunities for exercise. In this page, you will find more information about how to care for your pets throughout the various stages of their lives.</p>
   
@@ -56,8 +56,6 @@
                 <h3>Vaccinations & Medications</h3>
                 <p>You should always consult with your veterinarian, but there is a core set of vaccines that are typically recommended. Vaccines that reduce the exposure risk to things such as hepatitis, rabies, and parvovirus. Others may be determined by your vet depending on the environment in which the dog resides. Some of these include Bordetella bronchiseptica, Borrelia burgdorferi, and Leptospira bacteria.</p>
                 
-                <h3>Seven Years and More</h3>
-                <p>Much like many living organisms, the body begins to deteriorate and experience a lot of changes. Cats at this age should eat less fats and calories and more quality proteins. This means when you are purchasing packaged foods for your cat, look for food that states a particular protein (such as "salmon") and not just a category (such as fish). This usually means they are byproducts, or combinations, of lesser quality proteins.</p>
             </div>
           </section>
           <!--End Pet Section-->
