--- a/fish.html
+++ b/fish.html
@@ -40,7 +40,7 @@
           <!--Pet Section -->
           <section class="container py-5 mt-5 ">
             <div class="row">
-              <img src="images/fish-img.jpg" alt="cat" class="mx-auto">
+              <img src="images/fish-1.jpg" alt="cat" class="mx-auto">
               <h2 class="text-primary fs-1 fw-bold mb-5 text-center">Our Canine Companions </h2>
               <p>Saltwater fish also offer several options when it comes to choosing among species for your aquarium. As with freshwater fish, consult with a “Pexpert” to ensure your fish will get along are suited for a saltwater environment. Following these general guidelines to avoid dangerous water conditions and ensure the appropriate salinity level for your fishies:
                 ⦁	Salinity: 1.020–1.028 sg
