--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   
                 </div>
                 <div class="col-12 col-lg-6">
-                  <img src="images/hero2.jpg" alt="woman petting dog" class="img-fluid">
+                  <img src="images/twoDogs.jpg" alt="woman petting dog" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -58,7 +58,7 @@
         <!--About Section-->
         <section class="container py-5 mt-5">
           <div class="row g-5">
-            <div class="col-12 col-lg-5"><img src="images/about-img.jpg" alt="cat with open sign" class="img-fluid ms-auto d-block"></div>
+            <div class="col-12 col-lg-5"><img src="images/team.jpg" alt="cat with open sign" class="img-fluid ms-auto d-block"></div>
             <div class="col-12 col-lg-7">
               <h2 class="text-primary fs-1 fw-bold mb-3"> About Paradigm Pet Professionals</h2>
               <p>
@@ -91,28 +91,28 @@
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="images/dog-img.jpg" class="d-block w-100" alt="...">
+                      <img src="images/twoDogs.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Dogs</h5>
                         <button class="btn btn-primary">Dog Care</button>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="images/cat-img.jpg" class="d-block w-100" alt="...">
+                      <img src="images/cat-img01.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Cats</h5>
                         <button class="btn btn-primary">Feline Care</button>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="images/fish-img.jpg" class="d-block w-100" alt="...">
+                      <img src="images/fish-1.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Fish</h5>
                         <button class="btn btn-primary">Aquatic Care</button>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="images/customer-care.jpg" class="d-block w-100" alt="...">
+                      <img src="images/team.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Talk to our Petperts</h5>
                         <button class="btn btn-primary">Sign up Now!</button>
