--- a/cats.html
+++ b/cats.html
@@ -19,7 +19,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link fs-5" href="cats.html">Cats</a>
+                    <a class="nav-link fs-5 breadcrumb-item active badge text-bg-secondary py-3" href="cats.html">Cats</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link fs-5" href="dogs.html">Dogs</a>
@@ -38,8 +38,11 @@
             </div>
           </nav>
           <!--Pet Section -->
+          <div>
+           
+          </div>
         <section class="container py-5 mt-5 ">
-          <div class="row">
+          <h1 class="text-primary fs-1 fw-bold mb-5 text-center">Cats</h1>
             <img src="images/cat-img01.jpg" alt="cat" class="mx-auto">
             <h2 class="text-primary fs-1 fw-bold mb-5 text-center">Our Feline Friends</h2>
             <p>Cats were first domesticated around 7500 BCE in the western Asia region and are currently the second most popular domestic pet in the United States. While there are over 60 unique documented cat breeds, care and diet can differ between breeds. However, some diets and practices are generally recommended for the well-being of your fluffy family member regardless of breed.</p>
