--- a/dogs.html
+++ b/dogs.html
@@ -22,7 +22,7 @@
                     <a class="nav-link fs-5" href="cats.html">Cats</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link fs-5" href="dogs.html">Dogs</a>
+                    <a class="nav-link fs-5 breadcrumb-item active badge text-bg-secondary py-3" href="dogs.html">Dogs</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link fs-5" href="fish.html">Fish</a>
@@ -40,6 +40,7 @@
           <!--Pet Section -->
           <section class="container py-5 mt-5 ">
             <div class="row">
+              <h1 class="text-primary fs-1 fw-bold mb-5 text-center">Dogs</h1>
               <img src="images/twoDogs.jpg" alt="cat" class="mx-auto">
               <h2 class="text-primary fs-1 fw-bold mb-5 text-center">Our Canine Companions </h2>
               <p>The domestic dog is an extremely social animal and offers a diverse variety of choices as there are well over 300 breeds recognized by the World Canine Organization. Adopting a dog offers mutual benefits between dog and owner. Many studies cite the social benefits of having a companion as well as the reduced feelings of loneliness from adopting a dog. Studies even show medical indicators such as reduced blood pressure and improved lipid profiles. If you have a dog, it is important to make sure that you care for your dog; be mindful of what you feed your dog and provide enough opportunities for exercise. In this page, you will find more information about how to care for your pets throughout the various stages of their lives.</p>
