--- a/fish.html
+++ b/fish.html
@@ -25,7 +25,7 @@
                     <a class="nav-link fs-5" href="dogs.html">Dogs</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link fs-5" href="fish.html">Fish</a>
+                    <a class="nav-link fs-5 breadcrumb-item active badge text-bg-secondary py-3" href="fish.html">Fish</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link fs-5" href="petperts.html">Petperts</a>
@@ -40,8 +40,9 @@
           <!--Pet Section -->
           <section class="container py-5 mt-5 ">
             <div class="row">
+              <h1 class="text-primary fs-1 fw-bold mb-5 text-center">Fish</h1>
               <img src="images/fish-1.jpg" alt="cat" class="mx-auto">
-              <h2 class="text-primary fs-1 fw-bold mb-5 text-center">Our Canine Companions </h2>
+              <h2 class="text-primary fs-1 fw-bold mb-5 text-center">Our Aquatic Aquaintancies</h2>
               <p>Saltwater fish also offer several options when it comes to choosing among species for your aquarium. As with freshwater fish, consult with a “Pexpert” to ensure your fish will get along are suited for a saltwater environment. Following these general guidelines to avoid dangerous water conditions and ensure the appropriate salinity level for your fishies:
                 ⦁	Salinity: 1.020–1.028 sg
                 ⦁	pH Level: 7.6–8.4 (7.0 is considered neutral)
