--- a/index.html
+++ b/index.html
@@ -91,28 +91,28 @@
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="images/twoDogs.jpg" class="d-block w-100" alt="...">
+                      <img src="images/twoDogs.jpg" class="d-block w-100" alt="two dogs">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Dogs</h5>
                         <button class="btn btn-primary">Dog Care</button>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="images/cat-img01.jpg" class="d-block w-100" alt="...">
+                      <img src="images/cat-img01.jpg" class="d-block w-100" alt="cat">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Cats</h5>
                         <button class="btn btn-primary">Feline Care</button>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="images/fish-1.jpg" class="d-block w-100" alt="...">
+                      <img src="images/fish-1.jpg" class="d-block w-100" alt="fish">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Fish</h5>
                         <button class="btn btn-primary">Aquatic Care</button>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="images/team.jpg" class="d-block w-100" alt="...">
+                      <img src="images/team.jpg" class="d-block w-100" alt="team">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Talk to our Petperts</h5>
                         <button class="btn btn-primary">Sign up Now!</button>
