--- a/petperts.html
+++ b/petperts.html
@@ -17,7 +17,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 breadcrumb">
                   <li class="nav-item">
                     <a class="nav-link fs-5" href="cats.html">Cats</a>
                   </li>
@@ -27,8 +27,8 @@
                   <li class="nav-item">
                     <a class="nav-link fs-5" href="fish.html">Fish</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link fs-5" href="petperts.html">Petperts</a>
+                  <li class="nav-item breadcrumb-item active">
+                    <a class="nav-link fs-5 breadcrumb-item active badge text-bg-secondary py-3" href="petperts.html">Petperts</a>
                   </li>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -39,6 +39,7 @@
           </nav>
           <!--Registration -->
           <section class="container col-lg-6 mx-auto">
+            <h1 class="text-primary fs-1 fw-bold mb-5 text-center">Our Petpets</h1>
             <img src="images/team.jpg" alt="cat">
             <form>
               <!-- 2 column grid layout with text inputs for the first and last names -->
